[package]
name = "hermes"
version = "0.1.0"
edition = "2024"

[dependencies]
leptos = { version = "0.6", features = ["csr"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Element", "HtmlElement"] }

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
